@@ -1,3 +1,8 @@
+Sun Aug 20 17:03:38 CEST 2000 Daniel Veillard <Daniel.Veillard@w3.org>
+
+	* nanoftp.c nanohttp.c: small cleanup
+	* TODO: updated
+
 Sat Aug 19 22:57:02 CEST 2000 Daniel Veillard <Daniel.Veillard@w3.org>
 
 	* added an old VC testcase and updated title.xml entity
@@ -78,6 +83,7 @@ Fri Aug  4 11:21:50 PDT 2000 Daniel Veillard <Daniel.Veillard@w3.org>
 Sat Jul 22 05:59:05 CEST 2000 Daniel Veillard <Daniel.Veillard@w3.org>
 
 	* parser.c xmlIO.[ch]: fixed the problem of encoding support
+
 	  when using in memory parsing. Need some cleanup.
 	* xmllint.c configure.in: added a --memory flag to test memory
 	  parsing
